if (ALL_OPT STREQUAL ON)
    add_subdirectory(bitcoin)
    add_subdirectory(monero)
    add_subdirectory(BLEEPP2P)
elseif (GIT_OPT STREQUAL ON)
    add_subdirectory(bitcoin)
    add_subdirectory(BLEEPP2P)
elseif (BITCOIN_OPT STREQUAL ON)
    add_subdirectory(bitcoin)
    add_subdirectory(BLEEPP2P)
elseif (MONERO_OPT STREQUAL ON)
    add_subdirectory(monero)
else (ALL_OPT STREQUAL ON)
    add_subdirectory(bitcoin)
    add_subdirectory(BLEEPP2P)
endif (ALL_OPT STREQUAL ON)
